--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   },
   "devDependencies": {
     "angular-ui-router": "1.0.0-beta.3",
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "angular": "^1.5.8",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "lodash": "^4.17.1",
+    "webpack": "^1.13.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,5 +31,6 @@
   "homepage": "https://github.com/VladByrdo/todo-list#readme",
   "scripts": {
     "start": "http-server ./app",
+    "build": "webpack -w"
   }
 }
